--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "next": "15.2.4",
     "react": "^19.0.0",
